--- a/index.html
+++ b/index.html
@@ -17,7 +17,34 @@
 
     <button onclick="appendNumber(9)">9</button>
     
+    <button onclick="appendNumber('+')">+</button>
+
+    <button onclick="appendNumber(4)">4</button>
+
+    <button onclick="appendNumber(5)">5</button>
+
+    <button onclick="appendNumber(6)">6</button>
+
+    <button onclick="appendNumber('-')">-</button>
+
+    <button onclick="appendNumber(1)">1</button>
+
+    <button onclick="appendNumber(2)">2</button>
+
+    <button onclick="appendNumber(3)">3</button>
+
+    <button onclick="appendNumber('*')">*</button>
+
+    <button onclick="appendNumber('0')">0</button>
+
+    <button onclick="calculate()">=</button>
+
+    <button onclick="clear()">[</button>
+
+    <button onclick="appendOperator('/')">/</button>
     </div>   
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
