--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <button onclick="calculate()">=</button>
 
-    <button onclick="clear()">[</button>
+    <button onclick="clear()">C</button>
 
     <button onclick="appendOperator('/')">/</button>
     </div>   
